<resources>
    <string name="app_name">Restaurants</string>
    <string name="restaurants">Restaurants</string>
    <string name="nearby">Nearby</string>
    <string name="find">Find</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_restaurant">Add Restaurant</string>
    <string name="restaurantimage">restaurantimage</string>
    <string name="name">Restaurant Name</string>
    <string name="take_photo">Take Photo</string>
    <string name="rating">Rating:</string>
    <string name="no_camera_permission">No permission to use camera</string>
    <string name="budget_cheap">$</string>
    <string name="budget_normal">$$</string>
    <string name="budget_expensive">$$$</string>
    <string name="budget_very_expensive">$$$+</string>
    <string name="budget">Budget</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="food_type">Kitchen:</string>
    <string name="no_kitchen_chosen">No kitchen chosen</string>
    <string name="choose_kitchen">Choose kitchen</string>
    <string name="create_new_kitchen">Create new kitchen</string>
    <string name="kitchen_name">Kitchen name</string>
    <string name="placeholder_kitchen_name">ExampleKitchenName</string>
    <string name="button_ok">ok</string>
    <string name="no_budget_chosen">No budget chosen</string>
    <string name="no_restaurant_name">No restaurant name</string>
    <string name="no_rating">Please rate this restaurant</string>
    <string name="error_creating_restaurant">Information missing</string>
    <string name="no_position">No restaurant position given</string>
    <string name="no_location_permission">Could not get location</string>
    <string name="delete_restaurant">delete restaurant</string>
    <string name="edit_restaurant">Edit Restaurant</string>
    <string name="open_restaurant">Open Restaurant</string>

    <string name="rating_placeholder">%1$.1f</string>
    <string name="favorite_restaurant">Favorite</string>
    <string name="map">Map</string>
    <string name="delete_restaurant_dialog_title">Delete Restaurant?</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this restaurant?</string>
    <string name="cafe">Café</string>
    <string name="chinese">Chinese</string>
    <string name="fast_food">Fast food</string>
    <string name="swedish">Swedish</string>
    <string name="german">German</string>
    <string name="japanese">Japanese</string>
    <string name="pizza">Pizza</string>
    <string name="thai">Thai</string>
    <string name="steak">Steak</string>
    <string name="market">Market</string>
    <string name="mexican">Mexican</string>
    <string name="italian">Italian</string>
    <string name="use_user_location">Use my location</string>
    <string name="pick_on_map">Pick on map</string>
    <string name="require_location_permission">Requires location permission</string>
    <string name="unsaved_information">Restaurant not saved</string>
    <string name="restaurant_not_saved_yet" />
    <string name="stay">cancel</string>
    <string name="discard">Discard</string>
    <string name="error_getting_location">Error getting location</string>
    <string name="title_activity_show_restaurant_location">Location</string>
    <string name="return_location">Return location</string>
    <string name="no_position_found">Error: no position found</string>
    <string name="no_location_chosen">No location chosen</string>
    <string name="error_getting_address">Error getting location name</string>
    <string name="error_getting_address_location_set">Location set</string>
    <string name="error_edit_restaurant">Error editing restaurant, no restaurant with this id</string>
    <string name="save">Save</string>
    <string name="bundle_kitchen_type_list_view">KITCHEN_TYPE_LIST_VIEW</string>
    <string name="bundle_is_showing_choose_kitchen_dialog">IS_SHOWING_KITCHEN_DIALOG</string>
    <string name="bundle_is_showing_cancel_dialog">IS_SHOWING_CANCEL_DIALOG</string>
    <string name="bundle_location">LOCATION_LAT_LON</string>
    <string name="error_no_location">Error: no location chosen</string>
    <string name="choose_range">Set nearby distance</string>
    <string name="need_location_permission">Missing Permission</string>
    <string name="needs_location_permission">This application need location permissions</string>
    <string name="range_close">Close</string>
    <string name="range_far_away">Very far away</string>
    <string name="error">Error</string>
    <string name="show_me_another_restaurant">Show me another restaurant</string>
    <string name="no_restaurant_found">No restaurant found</string>
    <string name="change_settings_to_find_a_restaurant">Change settings to find a restaurant</string>
    <string name="reset">Reset</string>
    <string name="random_settings">Settings</string>
    <string name="closer">Closer</string>
    <string name="cheaper">Cheaper</string>
    <string name="other_kind_of_food">Other kind of food</string>
    <string name="not_this_restaurant">Not this restaurant</string>
    <string name="show_me_a_restaurant_that_is">Show me a restaurant that is</string>
    <string name="loading_location">Loading location</string>
    <string name="require_location">Require location</string>
    <string name="require_location_dialog_text">This feature requires location permission</string>
    <string name="about">About</string>
    <string name="reset_app">Reset application</string>
    <string name="about_dialog_title">About</string>

    <string name="delete_all_restaurants">Delete Restaurants?</string>
    <string name="are_you_sure_delete_all">Are you sure you want to delete all restaurants?</string>
    <string name="delete_button">Delete</string>
    <string name="no_restaurants">placeholder</string>
    <string name="placeholder">placeholder</string>
    <string name="no_restaurants_added">No restaurants has been added yet.\nTry adding some by pressing the plus button below.</string>
    <string name="no_restaurant_found_try_changing_area_size">No restaurants found.\nTry increasing the nearby area size\nor add more restaurants nearby.</string>


    <string name="about_dialog_content"><b>Privacy policy</b>
        \nThis application may use your camera if you want to add a custom picture to the restaurant.\nThis application uses your location in order to determine the location of restaurants and nearby restaurants.\nThe location service used may use Google Play Services in order to give an accurate location.
        \nThe location you provide when creating each restaurant will be stored in your device. This information won\'t be shared with anyone. All data you add about restaurants will only be stored on your device.
        \nThis application does not store any data that is unnecessary in order to provide you with the use cases of this application.
        \nThe application also <b>only</b> stores the data you provide (i.e. images and location information) in your device.
		\n<b>Google APIs</b>
		\nThis application uses Google\'s API for displaying a map and retrieving the address of a location.
		\nBy using this application you agree to Google\'s terms of service https://www.google.com/intl/en/policies/terms/ and privacy policy https://www.google.com/policies/privacy/
        \n<b><i>"Forget me"</i></b>
        \nIf you want to delete all information you have provided this application, use the reset application
        option in the menu.
        \n
        \n\n\n<b>Libraries</b>
        \nThis application uses the Butter Knife library by Jake Wharton released under the <i>http://www.apache.org/licenses/LICENSE-2.0</i> licence.
        \n

    </string>
    <string name="bundle_delete_all_restaurants_dialog">BUNDLE_DELETE_ALL_RESTAURANTS_DIALOG_SHOWING</string>
    <string name="bundle_range_dialog_showing">BUNDLE_RANGE_DIALOG_SHOWING</string>
    <string name="error_taking_picture">Error taking picture</string>
    <string name="error_croping_image">Error cropping image</string>
    <string name="bundle_latitude">BUNDLE_LATITUDE</string>
    <string name="bundle_longitude">BUNDLE_LONGITUDE</string>
    <string name="bundle_restaurant_id">BUNDLE_RESTAURANT_ID</string>
    <string name="bundle_random_settings">BUNDLE_RANDOM_SETTINGS</string>
    <string name="bundle_restaurant_expanded">BUNDLE_RESTAURANT_EXPANDED</string>

</resources>
