<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/create_kitchen_type_dialog_width"
    android:layout_height="@dimen/create_kitchen_type_dialog_height"
    android:layout_gravity="center"
    android:minWidth="@dimen/create_kitchen_type_dialog_width"
    android:minHeight="@dimen/create_kitchen_type_dialog_height"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    android:orientation="vertical"  >

    <TextView
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_kitchen"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_black_24dp"
            android:theme="@style/MaterialButton"
            android:tint="@color/white"
            android:contentDescription="@string/choose_kitchen"
            android:id="@+id/create_kitchenBtn"
            android:layout_alignParentEnd="true"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_toStartOf="@id/create_kitchenBtn"
            android:id="@+id/kitchen_name_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            >
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/kitchen_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kitchen_name"/>
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>


    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/kitchen_type_list_view"
        />



</LinearLayout>