<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/restaurant_card"
    app:cardUseCompatPadding="true"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/card_restaurant_name_size_plus_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin_half_half"
            android:layout_marginTop="@dimen/activity_vertical_margin_half_half"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            >
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                android:id="@+id/restaurant_rating"
                android:isIndicator="true"
                android:layout_centerVertical="true"
                android:stepSize="0.5"
                style="?android:attr/ratingBarStyleSmall"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hello World"
                android:id="@+id/restaurant_name"
                android:layout_alignParentStart="true"
                android:textSize="@dimen/card_restaurant_name_size"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_toStartOf="@id/restaurant_rating"
                android:maxLines="2"
                android:ellipsize="end"
                />



        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/small_card_image_size"
            android:id="@+id/restaurant_image"
            android:src="@drawable/restaurant_placeholder"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/restaurantimage" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin_half"
            android:layout_marginBottom="@dimen/activity_vertical_margin_half"
            android:id="@+id/expandable_layout"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/budget_type_card_output"
                android:text="output"
                />

            <TextView
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/kitchen_type_card_output"
                android:text="output"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1.0"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                >

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:src="@drawable/ic_delete_black_24dp"
                    android:contentDescription="@string/map"
                    android:id="@+id/delete_restaurant_btn"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    />
                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:src="@drawable/ic_edit_black_24dp"
                    android:contentDescription="@string/favorite_restaurant"
                    android:id="@+id/edit_restaurant_btn"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    />
            </LinearLayout>



        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.0"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            >

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:src="@drawable/ic_map_black_24dp"
                android:contentDescription="@string/map"
                android:id="@+id/show_restaurant_location_btn"
                android:background="?attr/selectableItemBackgroundBorderless"
                />
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:src="@drawable/ic_favorite_border_black_24dp"
                android:contentDescription="@string/favorite_restaurant"
                android:id="@+id/favorite_restaurant_btn"
                android:background="?attr/selectableItemBackgroundBorderless"
                />
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:src="@drawable/ic_expand_more_black_24dp"
                android:contentDescription="@string/open_restaurant"
                android:id="@+id/open_restaurant_info_btn"
                android:background="?attr/selectableItemBackgroundBorderless"
                />
        </LinearLayout>




    </LinearLayout>



</android.support.v7.widget.CardView>